// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BallEntry should render correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": "10px",
      "padding": "20px",
      "width": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "backgroundColor": "rgb(233, 236, 239)",
        "marginBottom": "4px",
        "paddingLeft": "15px",
        "paddingTop": "4px",
      }
    }
  >
    <h4>
      Player 22 to Player 1
    </h4>
  </div>
  <div
    className="row"
  >
    <div
      className="col-12 col-lg-6 d-none d-md-block"
    >
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Team 1
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0-0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Overs
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Player 1
          </h5>
        </div>
        <div
          className="col-6"
        >
          <span>
            <h5
              style={
                Object {
                  "display": "inline",
                  "marginRight": "10px",
                }
              }
            >
              0(0)
            </h5>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-certificate fa-w-16 "
              data-icon="certificate"
              data-prefix="fas"
              role="img"
              style={
                Object {
                  "color": "#007bff",
                }
              }
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M458.622 255.92l45.985-45.005c13.708-12.977 7.316-36.039-10.664-40.339l-62.65-15.99 17.661-62.015c4.991-17.838-11.829-34.663-29.661-29.671l-61.994 17.667-15.984-62.671C337.085.197 313.765-6.276 300.99 7.228L256 53.57 211.011 7.229c-12.63-13.351-36.047-7.234-40.325 10.668l-15.984 62.671-61.995-17.667C74.87 57.907 58.056 74.738 63.046 92.572l17.661 62.015-62.65 15.99C.069 174.878-6.31 197.944 7.392 210.915l45.985 45.005-45.985 45.004c-13.708 12.977-7.316 36.039 10.664 40.339l62.65 15.99-17.661 62.015c-4.991 17.838 11.829 34.663 29.661 29.671l61.994-17.667 15.984 62.671c4.439 18.575 27.696 24.018 40.325 10.668L256 458.61l44.989 46.001c12.5 13.488 35.987 7.486 40.325-10.668l15.984-62.671 61.994 17.667c17.836 4.994 34.651-11.837 29.661-29.671l-17.661-62.015 62.65-15.99c17.987-4.302 24.366-27.367 10.664-40.339l-45.984-45.004z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Player 2
          </h5>
        </div>
        <div
          className="col-6"
        >
          <span>
            <h5
              style={
                Object {
                  "display": "inline",
                  "marginRight": "10px",
                }
              }
            >
              0(0)
            </h5>
          </span>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Player 22
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0-0-0-0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Extras
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0
          </h5>
        </div>
      </div>
      <div>
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <h6>
              This over 0 - 0
            </h6>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "paddingLeft": "20px",
            }
          }
        />
      </div>
    </div>
    <div
      className="col-12 col-lg-6"
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col-2"
          />
          <div
            className="col-10"
          >
            <button
              className="btn btn-danger"
              onClick={[Function]}
            >
              NO BALL
            </button>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Runs
          </div>
          <div
            className="col-10"
          >
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              .
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              1
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              2
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              3
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              4
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Boundary
          </div>
          <div
            className="col-10"
          >
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              4
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              6
            </button>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Byes
          </div>
          <div
            className="col-10"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "width": "40px",
                }
              }
            />
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    1
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    2
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    3
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    4
                  </div>
                </div>
              </div>
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Leg byes
          </div>
          <div
            className="col-10"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "width": "40px",
                }
              }
            />
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    1
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    2
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    3
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    4
                  </div>
                </div>
              </div>
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Wide
          </div>
          <div
            className="col-10"
          >
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              .
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              1
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              2
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              3
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              4
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          />
          <div
            className="col-10"
          >
            <a
              className="btn btn-success"
              href="/match/wicket"
              onClick={[Function]}
            >
              Wicket
            </a>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              complete over
            </button>
            <button
              className="btn btn-success"
              onClick={[MockFunction]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              change ends
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              retired
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              absent
            </button>
            <button
              className="btn btn-success"
              onClick={[MockFunction]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              undo previous
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              complete innings
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              complete match
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BallEntry should render correctly when over complete 1`] = `
<div
  style={
    Object {
      "marginBottom": "10px",
      "padding": "20px",
      "width": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "backgroundColor": "rgb(233, 236, 239)",
        "marginBottom": "4px",
        "paddingLeft": "15px",
        "paddingTop": "4px",
      }
    }
  >
    <h4>
      Player 22 to Player 1
    </h4>
  </div>
  <div
    className="row"
  >
    <div
      className="col-12 col-lg-6 d-none d-md-block"
    >
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Team 1
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0-0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Overs
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Player 1
          </h5>
        </div>
        <div
          className="col-6"
        >
          <span>
            <h5
              style={
                Object {
                  "display": "inline",
                  "marginRight": "10px",
                }
              }
            >
              0(0)
            </h5>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-certificate fa-w-16 "
              data-icon="certificate"
              data-prefix="fas"
              role="img"
              style={
                Object {
                  "color": "#007bff",
                }
              }
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M458.622 255.92l45.985-45.005c13.708-12.977 7.316-36.039-10.664-40.339l-62.65-15.99 17.661-62.015c4.991-17.838-11.829-34.663-29.661-29.671l-61.994 17.667-15.984-62.671C337.085.197 313.765-6.276 300.99 7.228L256 53.57 211.011 7.229c-12.63-13.351-36.047-7.234-40.325 10.668l-15.984 62.671-61.995-17.667C74.87 57.907 58.056 74.738 63.046 92.572l17.661 62.015-62.65 15.99C.069 174.878-6.31 197.944 7.392 210.915l45.985 45.005-45.985 45.004c-13.708 12.977-7.316 36.039 10.664 40.339l62.65 15.99-17.661 62.015c-4.991 17.838 11.829 34.663 29.661 29.671l61.994-17.667 15.984 62.671c4.439 18.575 27.696 24.018 40.325 10.668L256 458.61l44.989 46.001c12.5 13.488 35.987 7.486 40.325-10.668l15.984-62.671 61.994 17.667c17.836 4.994 34.651-11.837 29.661-29.671l-17.661-62.015 62.65-15.99c17.987-4.302 24.366-27.367 10.664-40.339l-45.984-45.004z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Player 2
          </h5>
        </div>
        <div
          className="col-6"
        >
          <span>
            <h5
              style={
                Object {
                  "display": "inline",
                  "marginRight": "10px",
                }
              }
            >
              0(0)
            </h5>
          </span>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Player 22
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0-0-0-0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <h5>
            Extras
          </h5>
        </div>
        <div
          className="col-6"
        >
          <h5>
            0
          </h5>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          <div
            className="alert alert-danger"
            role="alert"
          >
            The current over should now be complete.
            <div>
              <button
                className="btn btn-danger"
                onClick={[MockFunction]}
              >
                Complete it now
              </button>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <h6>
              This over 0 - 0
            </h6>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "paddingLeft": "20px",
            }
          }
        />
      </div>
    </div>
    <div
      className="col-12 col-lg-6"
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col-2"
          />
          <div
            className="col-10"
          >
            <button
              className="btn btn-danger"
              onClick={[Function]}
            >
              NO BALL
            </button>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Runs
          </div>
          <div
            className="col-10"
          >
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              .
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              1
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              2
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              3
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              4
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Boundary
          </div>
          <div
            className="col-10"
          >
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              4
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              6
            </button>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Byes
          </div>
          <div
            className="col-10"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "width": "40px",
                }
              }
            />
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    1
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    2
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    3
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "transparent transparent #ffffff transparent",
                    "borderStyle": "solid",
                    "borderWidth": "0 14px 20px 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "transparent transparent #28a745 transparent",
                      "borderStyle": "solid",
                      "borderWidth": "0 12px 18px 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "1px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-2px",
                      }
                    }
                  >
                    4
                  </div>
                </div>
              </div>
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Leg byes
          </div>
          <div
            className="col-10"
          >
            <span
              style={
                Object {
                  "display": "inline-block",
                  "width": "40px",
                }
              }
            />
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    1
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    2
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    3
                  </div>
                </div>
              </div>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                  "paddingLeft": "2px",
                  "paddingRight": "2px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderColor": "#ffffff transparent transparent transparent",
                    "borderStyle": "solid",
                    "borderWidth": "20px 14px 0 14px",
                    "float": "left",
                    "height": 0,
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "borderColor": "#28a745 transparent transparent transparent",
                      "borderStyle": "solid",
                      "borderWidth": "18px 12px 0 12px",
                      "float": "left",
                      "height": 0,
                      "marginLeft": "-12px",
                      "marginTop": "-19px",
                      "width": 0,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "marginLeft": "-5px",
                        "marginTop": "-24px",
                      }
                    }
                  >
                    4
                  </div>
                </div>
              </div>
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          >
            Wide
          </div>
          <div
            className="col-10"
          >
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              .
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              1
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              2
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              3
            </button>
            <button
              className="btn btn-danger"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              4
            </button>
            <span
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
            >
              <select
                className="custom-select"
                onChange={[Function]}
                style={
                  Object {
                    "width": "84px",
                  }
                }
                value="other"
              >
                <option>
                  other
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
              <button
                className="btn btn-success"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "margin": "2px",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#fdfdfe",
              "marginBottom": "4px",
              "marginTop": "4px",
            }
          }
        >
          <div
            className="col-2"
          />
          <div
            className="col-10"
          >
            <a
              className="btn btn-success"
              href="/match/wicket"
              onClick={[Function]}
            >
              Wicket
            </a>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              complete over
            </button>
            <button
              className="btn btn-success"
              onClick={[MockFunction]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              change ends
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              retired
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              absent
            </button>
            <button
              className="btn btn-success"
              onClick={[MockFunction]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              undo previous
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              complete innings
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
              style={
                Object {
                  "margin": "2px",
                  "minWidth": "36px",
                }
              }
            >
              complete match
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
